# pg2json

./: .gitignore  README.md  README_ru.md  backup.py  config_example.json  main.py  pyproject.toml  restore.py  settings.py  temp.py
services/: json2pg.py  pg2json.py  utils.py
utils/: pg_dump_restore
